# trigger

./: CMakeLists.txt  README.md
.github/workflows/: dunedaq-develop-cpp-ci.yml
apps/: decode-tps-from-stream.cpp
cmake/: triggerConfig.cmake.in
docs/: README.md  trigger-alg-howto.md
include/trigger/: AlgorithmPlugins.hpp  FragmentMakers.hpp  Issues.hpp  Plugins.hpp  Set.hpp  TASet.hpp  TCSet.hpp  TPSet.hpp  TimeStampedData.hh  TriggerActivity.hh  TriggerActivity_serialization.hpp  TriggerCandidate.hh  TriggerCandidateType.hpp  TriggerCandidate_serialization.hpp  TriggerPrimitive.hh  TriggerPrimitive_serialization.hpp  serialize.hpp
plugins/: CommonIssues.hpp  FakeDataFlow.cpp  FakeDataFlow.hpp  FakeTPCreatorHeartbeatMaker.cpp  FakeTPCreatorHeartbeatMaker.hpp  FakeTpCreatorHeartbeatMaker.cpp  FakeTpCreatorHeartbeatMaker.hpp  ModuleLevelTrigger.cpp  ModuleLevelTrigger.hpp  RandomTriggerCandidateMaker.cpp  RandomTriggerCandidateMaker.hpp  TASetNQ.cpp  TAZipper.cpp  TAZipper.hpp  TCZipper.cpp  TCZipper.hpp  TPSetBufferCreator.cpp  TPSetBufferCreator.hpp  TPSetNQ.cpp  TPSetReceiver.cpp  TPSetReceiver.hpp  TPWriter.cpp  TPWriter.hpp  TPZipper.cpp  TPZipper.hpp  TimingTriggerCandidateMaker.cpp  TimingTriggerCandidateMaker.hpp  TriggerActivityMaker.cpp  TriggerActivityMaker.hpp  TriggerActivityMakerADCSimpleWindowPlugin.cpp  TriggerActivityMakerDBSCANPlugin.cpp  TriggerActivityMakerHorizontalMuonPlugin.cpp  TriggerActivityMakerMichelPlugin.cpp  TriggerActivityMakerPrescalePlugin.cpp  TriggerActivityMakerSupernovaPlugin.cpp  TriggerCandidateMaker.cpp  TriggerCandidateMaker.hpp  TriggerCandidateMakerADCSimpleWindowPlugin.cpp  TriggerCandidateMakerHorizontalMuonPlugin.cpp  TriggerCandidateMakerMichelPlugin.cpp  (+12 more)
python/trigger/: README.md  util.py
python/trigger/dbscan_ta_to_sink/: __main__.py  dbscan_ta_to_sink.py
python/trigger/fakertrt/: poisson_and_uniform_mlt_gen.py  toplevel.py
python/trigger/faketc/: faketc_and_mlt_gen.py  toplevel.py
python/trigger/faketp_chain/: README.md  __main__.py  faketp_chain.py
python/trigger/faketp_to_sink/: faketp_to_sink.py  toplevel.py
python/trigger/faketp_to_sink_faketpcreatorheartbeatmaker/: faketp_to_sink_faketpcreatorheartbeatmaker.py  toplevel.py
python/trigger/faketsd/: app_confgen.py  faketsd_and_mlt_gen.py  toplevel.py
python/trigger/readout_tp_to_sink/: __main__.py  readout_app.py  tp_sink_app.py
python/trigger/schemaload/: __init__.py  _schemaload_facade.py
python/trigger/tpset_pub_sub/: README.md  __main__.py  toplevel.py  tpset_consumer_gen.py  tpset_producer_gen.py
schema/trigger/: buffercreator.jsonnet  fakedataflow.jsonnet  faketimestampeddatagenerator.jsonnet  faketpcreatorheartbeatmaker.jsonnet  faketpcreatorheartbeatmakerinfo.jsonnet  intervaltccreator.jsonnet  intervaltriggercreator.jsonnet  moduleleveltrigger.jsonnet  moduleleveltriggerinfo.jsonnet  randomtriggercandidatemaker.jsonnet  randomtriggercandidatemakerinfo.jsonnet  tasetsink.jsonnet  timingtriggercandidatemaker.jsonnet  timingtriggercandidatemakerinfo.jsonnet  tpsetbuffercreator.jsonnet  tpsetreceiver.jsonnet  tpsetreceiverinfo.jsonnet  tpwriter.jsonnet  trigger-TimingTriggerCandidateMaker-make.jsonnet  trigger-TimingTriggerCandidateMaker-schema.jsonnet  triggeractivitymaker.jsonnet  triggercandidatemaker.jsonnet  triggerdecisionmaker.jsonnet  triggerprimitivemaker.jsonnet  triggerzipper.jsonnet
src/: BufferManager.cpp  FragmentMakers.cpp  LivetimeCounter.cpp  TimestampEstimator.cpp  TimestampEstimatorBase.cpp  TimestampEstimatorSystem.cpp  TokenManager.cpp
src/trigger/: BufferManager.hpp  LivetimeCounter.hpp  TASetBuffer.hpp  TCSetBuffer.hpp  TPSetBuffer.hpp  TimeSliceInputBuffer.hpp  TimeSliceOutputBuffer.hpp  TimestampEstimator.hpp  TimestampEstimatorBase.hpp  TimestampEstimatorSystem.hpp  TokenManager.hpp  TriggerGenericMaker.hpp
test/apps/: check_fragment_TPs.cxx  find_vd_coldbox_pseudo_collection.cxx  set_serialization_speed.cxx  taset_serialization.cxx
test/plugins/: BufferCreator.cpp  BufferCreator.hpp  CommonIssues.hpp  FakeDataFlow.cpp  FakeDataFlow.hpp  FakeTimeStampDataGenerator.cpp  FakeTimeStampDataGenerator.hpp  FakeTimeStampedDataGenerator.cpp  FakeTimeStampedDataGenerator.hpp  IntervalTCCreator.cpp  IntervalTCCreator.hpp  IntervalTriggerCreator.cpp  IntervalTriggerCreator.hpp  TASetSink.cpp  TASetSink.hpp  TPSetBufferCreator.cpp  TPSetBufferCreator.hpp  TPSetSink.cpp  TPSetSink.hpp
unittest/: BufferManager_test.cxx  LivetimeCounter_test.cxx  TPFragment_test.cxx  TimestampEstimatorSystem_test.cxx  TimestampEstimator_test.cxx  TokenManager_test.cxx  TriggerObjectOverlay_test.cxx  TriggerZipper_test.cxx  TxSet_test.cxx
